--- a/02 - JS Clock/index-START.html
+++ b/02 - JS Clock/index-START.html
@@ -1,73 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
+    <meta charset="UTF-8">
+    <title>JS + CSS Clock</title>
 </head>
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
+<div class="clock">
+    <div class="clock-face">
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
-      </div>
     </div>
+</div>
 
 
-  <style>
+<style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
-      font-family:'helvetica neue';
-      text-align: center;
-      font-size: 10px;
+        background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+        background-size: cover;
+        font-family: 'helvetica neue';
+        text-align: center;
+        font-size: 10px;
     }
 
     body {
-      margin: 0;
-      font-size: 2rem;
-      display:flex;
-      flex:1;
-      min-height: 100vh;
-      align-items: center;
+        margin: 0;
+        font-size: 2rem;
+        display: flex;
+        flex: 1;
+        min-height: 100vh;
+        align-items: center;
     }
 
     .clock {
-      width: 30rem;
-      height: 30rem;
-      border:20px solid white;
-      border-radius:50%;
-      margin:50px auto;
-      position: relative;
-      padding:2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
+        width: 30rem;
+        height: 30rem;
+        border: 20px solid white;
+        border-radius: 50%;
+        margin: 50px auto;
+        position: relative;
+        padding: 2rem;
+        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+        0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transform: translateY(-3px); /* account for the height of the clock hands */
     }
 
     .hand {
-      width:50%;
-      height:6px;
-      background:black;
-      position: absolute;
-      top:50%;
+        width: 50%;
+        height: 6px;
+        background: black;
+        position: absolute;
+        top: 50%;
     }
 
-  </style>
+</style>
 
-  <script>
-
-  </script>
+<script>
+    function clockPlay() {
+        let hourHand = document.querySelector(".hour-hand");//ClassName选择不到
+        let minHand = document.querySelector(".min-hand");
+        let secHand = document.querySelector(".second-hand");
+        let date = new Date();
+        let hours = date.getHours();//获得时钟
+        let min = date.getMinutes();//获得分钟
+        let sec = date.getSeconds();//获得秒钟
+        let hour_rotate = (hours * 30 - 90) + (Math.floor(min / 12) * 6);//floor方法可对一个数进行下舍入
+        hourHand.style.width="40%";//调短时针
+        secHand.style.height="4px";//调细秒针
+        hourHand.style.transformOrigin = "0 0";
+        minHand.style.transformOrigin = "0 0";
+        secHand.style.transformOrigin = "0 0";
+        hourHand.style.transform = `rotate(${hour_rotate}deg)`;
+        minHand.style.transform = `rotate(${(min * 6 - 90)}deg)`;
+        secHand.style.transform = `rotate(${(sec * 6 - 90)}deg)`;
+        hourHand.style.margin = "0 50%";//移动到中间
+        secHand.style.margin = "0 50%";
+        minHand.style.margin = "0 50%";
+    }
+    setInterval(clockPlay, 1000);
+    clockPlay();
+</script>
 </body>
 </html>
