--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -1,110 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Flex Panels 💪</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <meta charset="UTF-8">
+    <title>Flex Panels 💪</title>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <style>
+<style>
     html {
-      box-sizing: border-box;
-      background:#ffc600;
-      font-family:'helvetica neue';
-      font-size: 20px;
-      font-weight: 200;
+        box-sizing: border-box;
+        background: #ffc600;
+        font-family: 'helvetica neue';
+        font-size: 20px;
+        font-weight: 200;
     }
+
     body {
-      margin: 0;
+        margin: 0;
     }
+
     *, *:before, *:after {
-      box-sizing: inherit;
+        box-sizing: inherit;
     }
 
     .panels {
-      min-height:100vh;
-      overflow: hidden;
+        min-height: 100vh;
+        overflow: hidden;
+
+        display: flex;
     }
 
     .panel {
-      background:#6B0F9C;
-      box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
-      color:white;
-      text-align: center;
-      align-items:center;
-      /* Safari transitionend event.propertyName === flex */
-      /* Chrome + FF transitionend event.propertyName === flex-grow */
-      transition:
-        font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
+        background: #6B0F9C;
+        box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
+        color: white;
+        text-align: center;
+        align-items: center;
+        transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+        flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
         background 0.2s;
-      font-size: 20px;
-      background-size:cover;
-      background-position:center;
+        font-size: 20px;
+        background-size: cover;
+        background-position: center;
+
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;/*主轴为垂直方向，起点在上沿。*/
+        justify-content: center;/*中间对齐*/
     }
 
+    .panel1 {
+        background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
+    }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/1CD3fd8kHnE/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel2 {
+        background-image: url(https://source.unsplash.com/1CD3fd8kHnE/1500x1500);
+    }
+
+    .panel3 {
+        background-image: url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d);
+    }
+
+    .panel4 {
+        background-image: url(https://source.unsplash.com/ITjiVXcwVng/1500x1500);
+    }
+
+    .panel5 {
+        background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
+    }
 
     .panel > * {
-      margin:0;
-      width: 100%;
-      transition:transform 0.5s;
+        margin: 0;
+        width: 100%;
+        transition: transform 0.5s;
+
+        flex-grow:1;
+        flex-shrink: 0.5;/*属性定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小*/
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .panel p {
-      text-transform: uppercase;
-      font-family: 'Amatic SC', cursive;
-      text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-      font-size: 2em;
+        text-transform: uppercase;
+        font-family: 'Amatic SC', cursive;
+        text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+        font-size: 2em;
     }
+
+    /*:nth-child(n) 选择器匹配属于其父元素的第 N 个子元素，不论元素的类型。*/
     .panel p:nth-child(2) {
-      font-size: 4em;
+        font-size: 4em;
     }
 
     .panel.open {
-      font-size:40px;
+        font-size: 40px;
     }
 
-  </style>
+</style>
 
 
-  <div class="panels">
+<div class="panels">
     <div class="panel panel1">
-      <p>Hey</p>
-      <p>Let's</p>
-      <p>Dance</p>
+        <p>Hey</p>
+        <p>Let's</p>
+        <p>Dance</p>
     </div>
     <div class="panel panel2">
-      <p>Give</p>
-      <p>Take</p>
-      <p>Receive</p>
+        <p>Give</p>
+        <p>Take</p>
+        <p>Receive</p>
     </div>
     <div class="panel panel3">
-      <p>Experience</p>
-      <p>It</p>
-      <p>Today</p>
+        <p>Experience</p>
+        <p>It</p>
+        <p>Today</p>
     </div>
     <div class="panel panel4">
-      <p>Give</p>
-      <p>All</p>
-      <p>You can</p>
+        <p>Give</p>
+        <p>All</p>
+        <p>You can</p>
     </div>
     <div class="panel panel5">
-      <p>Life</p>
-      <p>In</p>
-      <p>Motion</p>
+        <p>Life</p>
+        <p>In</p>
+        <p>Motion</p>
     </div>
-  </div>
+</div>
 
-  <script>
+<script>
+    let panels = document.querySelectorAll(".panel");
+    panels.forEach(panel => panel.getElementsByTagName('p')[0].style.transform= "translateY(-100%)");//定位字
+    panels.forEach(panel => panel.getElementsByTagName('p')[2].style.transform= "translateY(100%)");
+    function panelsClose() {
+        panels.forEach(panel => panel.classList.remove('open'));
+    }
+    function moveText(text1,text2) {
+       // text1.style.visibility="visible";
+       // text2.style.visibility="visible";
+        text1.style.transform="translateY(0)";//移动字
+        text2.style.transform="translateY(0)"
+    }
+    function panelsOpen() {
+        if (this.classList.contains('open')) {
+            panelsClose();
+            this.classList.remove('open');
+            this.getElementsByTagName('p')[0].style.transform= "translateY(-100%)";
+            this.getElementsByTagName('p')[2].style.transform= "translateY(100%)";
+        } else {
+            panelsClose();
+            this.classList.add('open');
+            moveText(this.getElementsByTagName('p')[0],this.getElementsByTagName('p')[2]);
+        }
+    }
+    function panelsActive(e) {
+        if (e.propertyName.includes('flex')) {
+            this.classList.toggle('open-active');
+        }
+    }
 
-  </script>
+    panels.forEach(panel => panel.addEventListener('click', panelsOpen));
+    panels.forEach(panel => panel.addEventListener('transition', panelsActive))
 
+</script>
 
 
 </body>
