--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -135,8 +135,8 @@
 
     function panelsClose() {
         panels.forEach(panel => panel.classList.remove('open'));
-        e.getElementsByTagName('p')[0].style.transform= "translateY(-100%)";
-        e.getElementsByTagName('p')[2].style.transform= "translateY(100%)";
+       // this.getElementsByTagName('p')[0].style.transform= "translateY(-100%)";
+       // this.getElementsByTagName('p')[2].style.transform= "translateY(100%)";
     }
     function moveText(text1,text2) {
        // text1.style.visibility="visible";
