--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -110,7 +110,7 @@ When a user clicks a checkbox, holds Shift, and then clicks another checkbox a f
         }
     });
     let checkBeginBox;
-    function check(e) {
+    function check() {
         //debugger;
         console.log(checkBeginBox);
         console.log(shift);
