--- a/15 - Mouse Move Shadow/index-start.html
+++ b/15 - Mouse Move Shadow/index-start.html
@@ -50,8 +50,8 @@
     //target 事件属性可返回事件的目标节点（触发该事件的节点），如生成事件的元素、文档或窗口。
     function shadowMove(e) {
         let range = {
-            x: hero.offsetHeight,//hero的长
-            y: hero.offsetWidth//hero的宽
+            x: hero.offsetWidth,//hero的长
+            y: hero.offsetHeight//hero的宽
         };
 
         //鼠标当前的位置
