--- a/16 - Follow Along Link Highlighter/index-START.html
+++ b/16 - Follow Along Link Highlighter/index-START.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>👀👀👀Follow Along Nav</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>👀👀👀Follow Along Nav</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav>
-      <ul class="menu">
+<nav>
+    <ul class="menu">
         <li><a href="">Home</a></li>
         <li><a href="">Order Status</a></li>
         <li><a href="">Tweets</a></li>
         <li><a href="">Read Our History</a></li>
         <li><a href="">Contact Us</a></li>
-      </ul>
-    </nav>
+    </ul>
+</nav>
 
-    <div class="wrapper">
-      <p>Lorem ipsum dolor sit amet, <a href="">consectetur</a> adipisicing elit. Est <a href="">explicabo</a> unde natus necessitatibus esse obcaecati distinctio, aut itaque, qui vitae!</p>
-      <p>Aspernatur sapiente quae sint <a href="">soluta</a> modi, atque praesentium laborum pariatur earum <a href="">quaerat</a> cupiditate consequuntur facilis ullam dignissimos, aperiam quam veniam.</p>
-      <p>Cum ipsam quod, incidunt sit ex <a href="">tempore</a> placeat maxime <a href="">corrupti</a> possimus <a href="">veritatis</a> ipsum fugit recusandae est doloremque? Hic, <a href="">quibusdam</a>, nulla.</p>
-      <p>Esse quibusdam, ad, ducimus cupiditate <a href="">nulla</a>, quae magni odit <a href="">totam</a> ut consequatur eveniet sunt quam provident sapiente dicta neque quod.</p>
-      <p>Aliquam <a href="">dicta</a> sequi culpa fugiat <a href="">consequuntur</a> pariatur optio ad minima, maxime <a href="">odio</a>, distinctio magni impedit tempore enim repellendus <a href="">repudiandae</a> quas!</p>
-    </div>
+<div class="wrapper">
+    <p>Lorem ipsum dolor sit amet, <a href="">consectetur</a> adipisicing elit. Est <a href="">explicabo</a> unde natus
+        necessitatibus esse obcaecati distinctio, aut itaque, qui vitae!</p>
+    <p>Aspernatur sapiente quae sint <a href="">soluta</a> modi, atque praesentium laborum pariatur earum <a href="">quaerat</a>
+        cupiditate consequuntur facilis ullam dignissimos, aperiam quam veniam.</p>
+    <p>Cum ipsam quod, incidunt sit ex <a href="">tempore</a> placeat maxime <a href="">corrupti</a> possimus <a
+            href="">veritatis</a> ipsum fugit recusandae est doloremque? Hic, <a href="">quibusdam</a>, nulla.</p>
+    <p>Esse quibusdam, ad, ducimus cupiditate <a href="">nulla</a>, quae magni odit <a href="">totam</a> ut consequatur
+        eveniet sunt quam provident sapiente dicta neque quod.</p>
+    <p>Aliquam <a href="">dicta</a> sequi culpa fugiat <a href="">consequuntur</a> pariatur optio ad minima, maxime <a
+            href="">odio</a>, distinctio magni impedit tempore enim repellendus <a href="">repudiandae</a> quas!</p>
+</div>
 
-  <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
-  </script>
+<script>
+    //获取页面元素位置的几个way
+    // http://www.ruanyifeng.com/blog/2009/09/find_element_s_position_using_javascript.html
+    let items = document.querySelectorAll("a");
+    let span = document.createElement("span");
+    span.classList.add('highlight');//添加写好的CSS效果
+    document.body.appendChild(span);
+    //mousemove移入移出都会有事件
+    //所以此处用mouseenter
+    items.forEach(item => item.addEventListener("mouseenter", display));
+
+    function display() {
+        //白块定位到item的位置
+        //this.classList.add("highlight");
+        //Element.getBoundingClientRect()方法返回元素的大小及其相对于视口的位置。
+        let link = this.getBoundingClientRect();//核心方法
+        span.style.height = `${link.height}px`;
+        span.style.width = `${link.width}px`;
+        span.style.left = `${link.left}px`;//左边距
+        span.style.top = `${link.top + window.pageYOffset}px`;//滑动后的距离定位不到，下也能实现
+        //span.style.top = `${link.top + window.scrollY}px`;
+    }
+
+    /*
+    pageXOffset 和 pageYOffset 属性返回文档在窗口左上角水平和垂直方向滚动的像素。
+    pageXOffset 设置或返回当前页面相对于窗口显示区左上角的 X 位置。
+    pageYOffset 设置或返回当前页面相对于窗口显示区左上角的 Y 位置。
+    pageXOffset 和 pageYOffset 属性相等于 scrollX 和 scrollY 属性。这些属性是只读的。
+     */
+</script>
 </body>
 </html>
 
