--- a/02 - JS Clock/index-START.html
+++ b/02 - JS Clock/index-START.html
@@ -88,6 +88,8 @@
         minHand.style.margin = "0 50%";
     }
     setInterval(clockPlay, 1000);
+    //setInterval动作的作用是在播放动画的时，每隔一定时间就调用函数，方法或对象。
+    // 可以使用本动作更新来自数据库的变量或更新时间显示。
     clockPlay();
 </script>
 </body>
