--- a/21 - Countdown Timer/index.html
+++ b/21 - Countdown Timer/index.html
@@ -5,7 +5,7 @@
   <title>Countdown Timer</title>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
-</head>
+</head>minutes
 <body>
   <div class="timer">
     <div class="timer__controls">
