--- a/23 - Speech Detection/index-START.html
+++ b/23 - Speech Detection/index-START.html
@@ -1,60 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Speech Detection</title>
+    <meta charset="UTF-8">
+    <title>Speech Detection</title>
 </head>
 <body>
 
-  <div class="words" contenteditable>
-  </div>
+<div class="words" contenteditable>
+</div>
 
 <script>
-  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+    window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;//目前只有chrome兼容
 
+    const speech = new SpeechRecognition();
+    speech.interimResults = true;//控制语音辨别期间是否返回
+    speech.maxAlternatives = 3;//最大匹配数量为3
+
+    let p = document.createElement('p');
+    const words = document.querySelector('.words');
+    words.appendChild(p);
+
+    //转化接收到的语音对象
+    //是一个SpeechRecognitionEvent对象。
+    // 它的results属性就是语音匹配的结果，是一个数组，按照匹配度排序，最匹配的结果排在第一位。
+    // 该数组的每一个成员是SpeechRecognitionResult对象，
+    // 该对象的transcript属性是实际匹配的文本，
+    // confidence属性是可信度（在0与1之间）。
+    function tansText(e) {
+        //经尝试内容存在e.results里的的transript
+        let texts = Array.from(e.results)//把对象转化成数组
+            .map(text => text[0])//取0
+            .map(text => text.transcript); //取transript
+        console.log(texts);
+        words.innerHTML = texts;
+    }
+
+    //如果得到与语音匹配的值，则会触发result事件。
+    speech.addEventListener('result', tansText);
+    speech.addEventListener('end', speech.start);//保证之后还可以继续获取
+    speech.start();
 
 </script>
 
 
-  <style>
+<style>
     html {
-      font-size: 10px;
+        font-size: 10px;
     }
 
     body {
-      background:#ffc600;
-      font-family: 'helvetica neue';
-      font-weight: 200;
-      font-size: 20px;
+        background: #ffc600;
+        font-family: 'helvetica neue';
+        font-weight: 200;
+        font-size: 20px;
     }
 
     .words {
-      max-width:500px;
-      margin:50px auto;
-      background:white;
-      border-radius:5px;
-      box-shadow:10px 10px 0 rgba(0,0,0,0.1);
-      padding:1rem 2rem 1rem 5rem;
-      background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
-      background-size: 100% 3rem;
-      position: relative;
-      line-height:3rem;
+        max-width: 500px;
+        margin: 50px auto;
+        background: white;
+        border-radius: 5px;
+        box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
+        padding: 1rem 2rem 1rem 5rem;
+        background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
+        background-size: 100% 3rem;
+        position: relative;
+        line-height: 3rem;
     }
+
     p {
-      margin: 0 0 3rem;
+        margin: 0 0 3rem;
     }
 
     .words:before {
-      content: '';
-      position: absolute;
-      width: 4px;
-      top: 0;
-      left: 30px;
-      bottom: 0;
-      border: 1px solid;
-      border-color: transparent #efe4e4;
+        content: '';
+        position: absolute;
+        width: 4px;
+        top: 0;
+        left: 30px;
+        bottom: 0;
+        border: 1px solid;
+        border-color: transparent #efe4e4;
     }
-  </style>
+</style>
 
 </body>
 </html>
