--- a/26 - Whack A Mole/index-START.html
+++ b/26 - Whack A Mole/index-START.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Whack A Mole!</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Whack A Mole!</title>
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+<h1>Whack-a-mole! <span class="score">0</span></h1>
+<div class="begin"><button onClick="startGame()">Start!</button></div>
 
-  <div class="game">
+<div class="game">
     <div class="hole hole1">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
     <div class="hole hole2">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
     <div class="hole hole3">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
     <div class="hole hole4">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
     <div class="hole hole5">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
     <div class="hole hole6">
-      <div class="mole"></div>
+        <div class="mole"></div>
     </div>
-  </div>
+</div>
 
 <script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+    const holes = document.querySelectorAll('.hole');
+    const scoreBoard = document.querySelector('.score');
+    const moles = document.querySelectorAll('.mole');
+    //console.log(holes);
+    let scores = 0;
 
+    //设置随机数
+    function random(max, min) {
+        return parseInt(Math.random() * (max - min) + min);
+    }
+
+    //开始游戏
+    function startGame() {
+        scoreBoard.textContent = 0;//textContent 属性设置或返回指定节点的文本内容，以及它的所有后代
+        scores = 0;
+        //出现
+        getRandomMole();
+    }
+
+    //随机出老鼠
+    function getRandomMole() {
+        let id = parseInt(Math.random() * 6);
+        let hole = holes[id];
+        let time= random(600,1000);
+        hole.classList.add("up");
+        setTimeout(()=>{
+            hole.classList.remove("up");
+            getRandomMole();
+        },time)
+
+    }
+    //点中老鼠
+    function getMole() {
+        scores++;
+        this.parentNode.classList.remove('up');
+        scoreBoard.textContent = scores;
+    }
+
+    moles.forEach(mole => mole.addEventListener("click", getMole))
 </script>
 </body>
 </html>
